infra/k8s/production/gcloud/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: '16m'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prosphere.muhammednajin.site
      secretName: my-tls-secret
  rules:
    - host: prosphere.muhammednajin.site
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-srv
              port:
                number: 3000
        - path: /api/v1/payment/webhook
          pathType: Prefix
          backend:
            service:
              name: payment-srv
              port:
                number: 3005
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-gateway-srv
              port:
                number: 6002
        - path: /auth-socket
          pathType: Prefix
          backend:
            service:
              name: auth-srv
              port:
                number: 7000
        - path: /notification-socket
          pathType: Prefix
          backend:
            service:
              name: notification-srv
              port:
                number: 4000
        - path: /chat-socket
          pathType: Prefix
          backend:
            service:
              name: chat-srv
              port:
                number: 8080
